Python-RSA changelog
========================================


Version 3.4 - in development
----------------------------------------

- Moved development to Github.
- Fixed bugs #14, #27, #30


Version 3.3 - released 2016-01-13
----------------------------------------

- Thanks to Filippo Valsorda: Fix BB'06 attack in verify() by
  switching from parsing to comparison. See [1] for more information.
- Simplified Tox configuration and dropped Python 3.2 support. The
  coverage package uses a u'' prefix, which was reintroduced in 3.3
  for ease of porting.

[1] https://blog.filippo.io/bleichenbacher-06-signature-forgery-in-python-rsa/


Version 3.2.3 - released 2015-11-05
----------------------------------------

- Added character encoding markers for Python 2.x


Version 3.2.1 - released 2015-11-05
----------------------------------------

- Added per-file licenses
- Added support for wheel packages
- Made example code more consistent and up to date with Python 3.4


Version 3.2 - released 2015-07-29
----------------------------------------

- Mentioned support for Python 3 in setup.py


Version 3.1.4 - released 2014-02-22
----------------------------------------

- Fixed some bugs


Version 3.1.3 - released 2014-02-02
----------------------------------------

- Dropped support for Python 2.5


Version 3.1.2 - released 2013-09-15
----------------------------------------

- Added Python 3.3 to the test environment.
- Removed dependency on Distribute
- Added support for loading public keys from OpenSSL


Version 3.1.1 - released 2012-06-18
----------------------------------------

- Fixed doctests for Python 2.7
- Removed obsolete unittest so all tests run fine on Python 3.2

Version 3.1 - released 2012-06-17
----------------------------------------

- Big, big credits to Yesudeep Mangalapilly for all the changes listed
  below!
- Added ability to generate keys on multiple cores simultaneously.
- Massive speedup